[gd_scene load_steps=9 format=3 uid="uid://cf5l7twlbs4a8"]

[ext_resource type="Texture2D" uid="uid://b43xetxyd4lhn" path="res://image/character/lepelican/sprite sheet/pelican.png" id="1_16t78"]
[ext_resource type="Script" path="res://scripte/pelican.gd" id="1_is34e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opk12"]
size = Vector2(197, 508)

[sub_resource type="Animation" id="Animation_vauqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_pelican:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1buaf"]
resource_name = "idle"
length = 0.93
loop_mode = 1
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_pelican:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77]
}

[sub_resource type="Animation" id="Animation_iso30"]
resource_name = "marche"
length = 1.44
loop_mode = 1
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_pelican:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87, 0.9, 0.93, 0.96, 0.99, 1.02, 1.05, 1.08, 1.11, 1.14, 1.17, 1.2, 1.23, 1.26, 1.29, 1.32, 1.35, 1.38),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0lr8"]
_data = {
"RESET": SubResource("Animation_vauqb"),
"idle": SubResource("Animation_1buaf"),
"marche": SubResource("Animation_iso30")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqt5d"]
size = Vector2(49, 504)

[node name="pelican" type="CharacterBody2D"]
script = ExtResource("1_is34e")

[node name="Sprite_pelican" type="Sprite2D" parent="."]
texture = ExtResource("1_16t78")
hframes = 9
vframes = 9

[node name="Collision_pelican" type="CollisionShape2D" parent="."]
position = Vector2(-19.5, 13)
shape = SubResource("RectangleShape2D_opk12")

[node name="Animation_pelican" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g0lr8")
}

[node name="Camera_pelican" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="item_pelican" type="Sprite2D" parent="."]
position = Vector2(-1.53851, -299.311)

[node name="area_pelican" type="Area2D" parent="."]

[node name="zone_inter_pelican" type="CollisionShape2D" parent="area_pelican"]
position = Vector2(-14.5, 14)
shape = SubResource("RectangleShape2D_vqt5d")
debug_color = Color(0.901064, 0.220412, 0.55415, 0.42)

[connection signal="area_entered" from="area_pelican" to="." method="_on_area_pelican_area_entered"]
[connection signal="area_exited" from="area_pelican" to="." method="_on_area_pelican_area_exited"]
